[tool.poetry]
name = "api-twitter"
version = "1.0.0"
description = "consumindo api twitter"
authors = ["Marcus Barcelos <marcusbarcelos2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.14.0"
pymongo = "^4.5.0"
fastapi = "^0.68.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^21.8b0"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
